# HML

./: HML.cabal  README.md  bench.html  stack.yaml
app/: Main.hs
c/: a.out  pimontecarlo.c  vectordot.c
hml-accelerate/: LICENSE  hml-accelerate.cabal
hml-accelerate/app/: Main.hs
hml-accelerate/src/: ShallowNN.hs
hml-accelerate/test/: Test.hs
python/: mnist.py
src/: FFNN.hs  Lib.hs
src/AccelerateCore/: Base.hs
src/HML/Base/: Algebra.hs
