name:                HML
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jhoxray/HML#readme
license:             BSD3
license-file:        LICENSE
author:              J X-Ray Ho
maintainer:          jho.xray@gmail.com
copyright:           Copyright: (c) 2016 J X-Ray Ho
category:            languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -O2 -fllvm
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , random
                     , mersenne-random
                     , vector-random
                     , ghc-prim
  default-language:    Haskell2010

executable HML-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -fllvm -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HML
                     , criterion
                     , vector
                     , mersenne-random
                     , vector-random
  default-language:    Haskell2010

test-suite HML-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HML
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jhoxray/HML
